Mobile responsiveness corrected
Replaced header with mobile nav and logo
Replaced CSS menu button with JS menu button
Readded background image
Aligned social media on bottom
Podcast page still overflowing from viewport

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -27,6 +27,7 @@ table {
 /*************************/
 @media only screen and (max-width: 860px) {
   header, footer, main, body {
+        float: none;
         width: auto;
         max-width: 100%;
         height: auto;
@@ -39,8 +40,8 @@ table {
 
   /*HTML*/
     html {
-/*        background-image: url(/images/alone.jpg) no-repeat center center fixed; */
-      background-image: none;
+/*        background-image: url(../images/alone.jpg); */
+/*      background-image: none;*/
       
 /*        display: table-cell;*/
 /*        vertical-align: middle;*/
@@ -71,12 +72,16 @@ table {
   
   /*Body*/
     body {
-      padding-bottom: 75px;
-      background: url(./images/alone.jpg) center center cover no-repeat fixed;
+/*      padding-bottom: 75px;*/
+      background-image: url(../images/alone.jpg);
+      background-attachment: fixed;
+      background-size: cover;
+      background-position: center;
       -moz-background-size: cover;
       -webkit-background-size: cover;
       -o-background-size: cover;
-      background-size: cover;
+      margin-top: 0;
+      top: 0;
   }
 
   
@@ -85,20 +90,32 @@ table {
       display: none;
     }
     .mobile-nav {
-      display: inline-block;
+      background-color: rgba(26, 7, 26, 0.9);
+      display: block;
+      position: absolute;
+/*      top: -50px;*/
+      width: 100%;
+      margin: 0;
+      padding: 0;
+      height: 85px;
+      box-shadow: antiquewhite 0px 2px 10px;;
+/*      display: inline-block;*/
   /*    position: absolute;*/
   /*    width: 100%;*/
-      left: 0;*/
-      top: 4.375em;
-      position: relative;
+/*      left: 0;*/
+/*      top: 4.375em;*/
+/*      position: relative;*/
     }
-    .dropdown-content {
-      display: none;
-      position: absolute;
+    #dropdown-content {
+      display: none; /*DISPLAY NONE WHEN DONE*/
+      position: relative;
+      top: 23.5px;
       font-size: 1.5em;
       z-index: 1000;
+      background-color:rgba(26, 7, 26, 0.6);
+      box-shadow: antiquewhite 0px 1px 17px;
     }  
-    .dropdown-content a {
+    #dropdown-content a {
       font-family: "Tulpen One";
       letter-spacing: 6px;
       font-weight: bold;
@@ -108,15 +125,24 @@ table {
       text-decoration: none;
       display: block;
       z-index: 11;
-      border: dotted 1px antiquewhite;
+      background-color:rgba(26, 7, 26, 0.9);
+/*      border: dotted 1px antiquewhite;*/
       margin: 10px;
       padding: 10px 50px;
     }  
-    .mobile-nav:hover .dropdown-content {
+    .dropbtn:hover #dropdown-content {
       display: block;
       z-index: 11;
-      background-color:rgba(26, 7, 26, 0.9);
-    }  
+      background-color:rgba(26, 7, 26, 0.6);
+      padding: 5px 0;
+    }
+    .dropbtn {
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    top: 17.5px;
+    right: 17.5px;
+  }
     .dropbtn img{
       filter: invert(100%);
       width: 50px;
@@ -125,29 +151,48 @@ table {
   }  
     button {
       background: transparent;
+/*      background-image: url("images/menu.png");*/
       border: none;
-      padding: 30px 0 0 30px;
+        z-index: 500;
+      width: 50px;
+      height: 50px;
+/*      padding: 30px 0 0 30px;*/
     }
     nav a {
           font-size: 1.5em;
       }
+      .title, .subtitle {
+      margin: 0;
+      padding: 0;
+/*      margin: 30px 0 0 0;*/
+      text-shadow: black 3px 3px 3px;
+      text-align: center;
+      margin: auto;
+
+/*      width: auto;*/
+/*      max-width: 100%;*/
+    }  
+  .title {
+    font-size: 30px;
+
+  }
+  .subtitle{
+    font-size: 0.5em;
+    
+/*      width: auto;*/
+/*      max-width: 100%;*/
+  }
+  #mobile-logo {
+    position: relative;
+    top: 16.5px;
+    width: 45%;
+    margin: auto;
+  }
   
   
   /*Header*/
   
-    .title {
-      font-size: 2em;
-      margin: 30px 0 0 0;
-      text-shadow: black 3px 3px 3px;
-/*      width: auto;*/
-/*      max-width: 100%;*/
-    }  
-/*
-  .subtitle{
-      width: auto;
-      max-width: 100%;
-  }
-*/
+
     .subtitle, .subtitle a {
 
 /*      text-shadow: black 3px 3px 3px;*/
@@ -170,6 +215,12 @@ table {
     /*min-width: 300px;*/
         /* max-width: 500px; */
         /* width: 100%; */
+      min-height: 100vh;
+      overflow: hidden;
+      display: block;
+      position: relative;
+      top: 75px;
+      background-color: rgba(43, 12, 43 , 0.65)
     }
 
 
@@ -177,8 +228,11 @@ table {
   
   /*Footer*/
     footer {
-        /* position: absolute; */
-        bottom: 0px;
+      position: absolute; 
+      width: 100%;
+      height: 75px;
+      box-shadow: antiquewhite 1px 0 12px;
+      margin-top: 0px;
       }
     .edit-by span{
       display: none;
@@ -233,7 +287,9 @@ table {
 /*      width: auto;*/
       margin: auto;
       background-repeat: no-repeat;
-      max-width: 100%;
+      width: 100%;
+      padding: 0;
+/*      max-width: 100%;*/
 /*    height: 100%;*/
       transform: scale(.75)
     }
@@ -244,6 +300,10 @@ table {
     #player-bar {
 /*    transform: scale(0.6);*/
 /*    width: 60%;*/
+      max-width: 450px;
+  }
+  #news {
+    margin-bottom: 50px;
   }
   
   /*About*/
@@ -301,7 +361,7 @@ table {
   }
 }
 
-@media only screen and (max-width: 860px) {
+@media only screen and (max-width: 415px) {
       div#latest-episode {
 /*      width: auto;*/
       margin: auto;
@@ -310,7 +370,9 @@ table {
 /*    height: 100%;*/
       transform: scale(.5);
     }
-  
+  #mobile-logo {
+    margin-left: 15px;
+  }
       html, body {
     font-size: .9em;
     width: 100%;
@@ -321,11 +383,27 @@ table {
     margin: auto;
     float: none;
     display: block;
+    vertical-align: middle;
+    bottom: 20.5px;
   }
   
   .edit-by {
     display: none;
   }
   
+  main{
+    margin: 0;
+    padding: 30px 0;
+  }
+  h2 {
+    font-size: 2.5em;
+    text-align: center;
+    padding: 0;
+  }
+  p {
+    padding: 25px;
+    font-size: 1.6em;
+/*    text-align: justify;*/
+  }
   h3, p, a {}
 }
